--- a/style/font.css
+++ b/style/font.css
@@ -71,7 +71,7 @@ color: #737272;
 }
 
 .white-title{
-    font-family: 'Work Sans';
+font-family: 'Work Sans';
 font-style: normal;
 font-weight: 700;
 font-size: 40px;
@@ -81,6 +81,25 @@ color: #FFFFFF;
 padding-bottom: 24px;
 padding-left: 64px;
 
+
+}
+.white{
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    
+    color: #FFFFFF;
+
+}
+.footlines{
+    font-family: 'Work Sans';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 26px;
+color: #FFFFFF;
 
 }
 
